Moved the overflow stuff from the iframe to a mixin and included it into the html embed (still buggy).
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk@13513 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/frontend/application/feedreader/source/resource/feedreader/css/reader.css
+++ b/qooxdoo/frontend/application/feedreader/source/resource/feedreader/css/reader.css
@@ -48,10 +48,6 @@
   margin-left: 24px;
 }
 
-.blogEntry {
-	overflow: auto;
-}
-
 .blogEntry div.date {
   font-weight: bold;
   color: #1D65B3;
